force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <description>Proposals hold tracking and classification information related to proposals submitted to GFW.  If the proposal is awarded, then the records also hold information related to the grant.</description>
    <label>Proposal</label>
    <nameField>
        <displayFormat>PROP-{000000}</displayFormat>
        <label>Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>