force-app/main/default/objects/Proposal__c/fields/Accountability_verified__c.field-meta.xml
<CustomField>
    <fullName>Accountability_verified__c</fullName>
    <description>Checked if the most recent report has non-blank Date Accountability Verified</description>
    <formula>NOT(ISBLANK(Milestone_recent__r.Date_accountability_verified__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the most recent report has non-blank Date Accountability Verified</inlineHelpText>
    <label>Accountability verified</label>
    <type>Checkbox</type>
</CustomField>