force-app/main/default/objects/Proposal__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <description>(2) Yes, alignment with Theory of Change and a clear commitment to women’s rights. 
(1) Not aligned but potential relevance
(0) No relevance</description>
    <inlineHelpText>Does their application align with our priorities and theory of change?</inlineHelpText>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2)</fullName>
            </value>
            <value>
                <fullName>Potential relevance (1)</fullName>
            </value>
            <value>
                <fullName>No relevance (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>