force-app/main/default/objects/Proposal__c/fields/Amount_awarded__c.field-meta.xml
<CustomField>
    <fullName>Amount_awarded__c</fullName>
    <description>Actual amount awarded to the group (possibly over multiple payments)</description>
    <inlineHelpText>Actual amount awarded to the group (possibly over multiple payments)</inlineHelpText>
    <label>Amount awarded</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>