force-app/main/default/objects/Proposal__c/fields/Amount_recommended__c.field-meta.xml
<CustomField>
    <fullName>Amount_recommended__c</fullName>
    <description>Suggestion for amount awarded</description>
    <inlineHelpText>Suggestion for amount awarded</inlineHelpText>
    <label>Amount recommended</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>