force-app/main/default/objects/Proposal__c/fields/Amount_requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested__c</fullName>
    <description>The amount requested by the group in their proposal</description>
    <inlineHelpText>The amount requested by the group in their proposal</inlineHelpText>
    <label>Amount requested</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>