force-app/main/default/objects/Proposal__c/fields/Amount_requested_extra_text__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested_extra_text__c</fullName>
    <description>Extra text related to amount requested</description>
    <inlineHelpText>Extra text related to amount requested</inlineHelpText>
    <label>Amount requested extra text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>