force-app/main/default/objects/Proposal__c/fields/Amount_returned_by_grantee__c.field-meta.xml
<CustomField>
    <fullName>Amount_returned_by_grantee__c</fullName>
    <description>That portion of the original amount awarded returned to us by the grantee</description>
    <inlineHelpText>That portion of the original amount awarded returned to us by the grantee</inlineHelpText>
    <label>Amount returned by grantee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>