force-app/main/default/objects/Proposal__c/fields/App_type__c.field-meta.xml
<CustomField>
    <fullName>App_type__c</fullName>
    <description>The type of application that led to this proposal</description>
    <inlineHelpText>The type of application that led to this proposal</inlineHelpText>
    <label>App type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>