force-app/main/default/objects/Proposal__c/fields/Award_amount__c.field-meta.xml
<CustomField>
    <fullName>Award_amount__c</fullName>
    <description>Equals amount awarded when grant is awarded; blank for proposals under review, declined or withdrawn</description>
    <formula>IF(Grant__c, Amount_awarded__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals amount awarded when grant is awarded; blank for proposals under review, declined or withdrawn</inlineHelpText>
    <label>Award amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>