force-app/main/default/objects/Proposal__c/fields/Award_notification_deadline__c.field-meta.xml
<CustomField>
    <fullName>Award_notification_deadline__c</fullName>
    <description>Date by which we promise to notify the group whether they have been awarded or not</description>
    <inlineHelpText>Date by which we promise to notify the group whether they have been awarded or not</inlineHelpText>
    <label>Award notification deadline</label>
    <type>Date</type>
</CustomField>