force-app/main/default/objects/Proposal__c/fields/Award_withdrawn_reason__c.field-meta.xml
<CustomField>
    <fullName>Award_withdrawn_reason__c</fullName>
    <description>Why was the award withdrawn</description>
    <inlineHelpText>Why was the award withdrawn</inlineHelpText>
    <label>Award withdrawn reason</label>
    <type>TextArea</type>
</CustomField>