force-app/main/default/objects/Proposal__c/fields/Awarded_percent_of_budget__c.field-meta.xml
<CustomField>
    <fullName>Awarded_percent_of_budget__c</fullName>
    <description>Amount awarded as a percent of budget anticipated</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Amount_awarded__c )),
  Budget_anticipated__c &gt; 0
 ),
 Amount_awarded__c /  Budget_anticipated__c ,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount awarded as a percent of budget anticipated</inlineHelpText>
    <label>Awarded percent of budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>