force-app/main/default/objects/Proposal__c/fields/Awarded_percent_of_requested__c.field-meta.xml
<CustomField>
    <fullName>Awarded_percent_of_requested__c</fullName>
    <description>Amount awarded as a percent of amount requested</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Amount_awarded__c )),
  Amount_requested__c &gt; 0
 ),
 Amount_awarded__c / Amount_requested__c,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount awarded as a percent of amount requested</inlineHelpText>
    <label>Awarded percent of requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>