force-app/main/default/objects/Proposal__c/fields/Board_EC_approval_details__c.field-meta.xml
<CustomField>
    <fullName>Board_EC_approval_details__c</fullName>
    <description>The amount and duration approved by the Board/EC</description>
    <inlineHelpText>The amount and duration approved by the Board/EC</inlineHelpText>
    <label>Board approval details</label>
    <type>TextArea</type>
</CustomField>