force-app/main/default/objects/Proposal__c/fields/Budget_anticipated__c.field-meta.xml
<CustomField>
    <fullName>Budget_anticipated__c</fullName>
    <description>Group&apos;s estimated of their upcoming budget</description>
    <inlineHelpText>Group&apos;s estimated of their upcoming budget</inlineHelpText>
    <label>Budget anticipated</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>