force-app/main/default/objects/Proposal__c/fields/Budget_assess__c.field-meta.xml
<CustomField>
    <fullName>Budget_assess__c</fullName>
    <description>Note that any issues with financial management should be included in the financial section of the risk assessment. Here, the focus is on the request budget. 
Yes (2): Proposed budget matches planned effort and resources needed to implement the proposed work and achieve desired impact 
Somewhat (1): Most elements of proposed work necessary to achieve desired impact is present in the budget
Not reasonable (0): Unclear how budget connects to planned activities</description>
    <inlineHelpText>Is the budget linked to the proposed request and costs realistic and reasonable?</inlineHelpText>
    <label>Budget assess</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2)</fullName>
            </value>
            <value>
                <fullName>Somewhat (1)</fullName>
            </value>
            <value>
                <fullName>Not reasonable (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>