force-app/main/default/objects/Proposal__c/fields/Budget_past__c.field-meta.xml
<CustomField>
    <fullName>Budget_past__c</fullName>
    <description>The amount of the group&apos;s most recent budget</description>
    <inlineHelpText>The amount of the group&apos;s most recent budget</inlineHelpText>
    <label>Budget past</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>