force-app/main/default/objects/Proposal__c/fields/Budget_report_template__c.field-meta.xml
<CustomField>
    <fullName>Budget_report_template__c</fullName>
    <description>URL for a file representing the budget report template for this grant</description>
    <inlineHelpText>URL for a file representing the budget report template for this grant</inlineHelpText>
    <label>Budget report template</label>
    <type>Url</type>
</CustomField>