force-app/main/default/objects/Proposal__c/fields/CFO_approved__c.field-meta.xml
<CustomField>
    <fullName>CFO_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to indicate that the CFO has approved the contract/payment for this grantee</description>
    <inlineHelpText>Set to indicate that the CFO has approved the contract/payment for this grantee</inlineHelpText>
    <label>CFO approved</label>
    <type>Checkbox</type>
</CustomField>