force-app/main/default/objects/Proposal__c/fields/Charged_to_date__c.field-meta.xml
<CustomField>
    <fullName>Charged_to_date__c</fullName>
    <description>Total amount charged</description>
    <inlineHelpText>Total amount charged</inlineHelpText>
    <label>Charged to date</label>
    <summarizedField>Charge__c.Amount_charged__c</summarizedField>
    <summaryForeignKey>Charge__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>