force-app/main/default/objects/Proposal__c/fields/Committee_approval_URL__c.field-meta.xml
<CustomField>
    <fullName>Committee_approval_URL__c</fullName>
    <description>Link to document(s) containing committee approval information</description>
    <inlineHelpText>Link to document(s) containing committee approval information</inlineHelpText>
    <label>Committee approval URL</label>
    <type>Url</type>
</CustomField>