force-app/main/default/objects/Proposal__c/fields/Contextual_analysis__c.field-meta.xml
<CustomField>
    <fullName>Contextual_analysis__c</fullName>
    <description>Examples of strategic include nimbleness, resourceful, resilient, adaptive, innovative 
(2) Clear understanding of issues and/or problems as situated in historical and socio-economic setting and demonstrated responsiveness to this reality
(1) Mention impact of historical and socio economic factors on how they plan to conduct their work
(0) No mention or explanation given on how the group develops its strategy or implements its programs</description>
    <inlineHelpText>Is the group strategic in terms of their work within the local context?</inlineHelpText>
    <label>Contextual analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (2)</fullName>
            </value>
            <value>
                <fullName>Somewhat (1)</fullName>
            </value>
            <value>
                <fullName>None (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>