force-app/main/default/objects/Proposal__c/fields/Contract_signer_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_signer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact linked to this proposal&apos;s account who is the second designated contract signer (usually blank as most contracts have only one signer)</description>
    <inlineHelpText>The contact linked to this proposal&apos;s account who is the second designated contract signer (usually blank as most contracts have only one signer)</inlineHelpText>
    <label>Contract signer 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contract signer&apos;s account must be the same as this proposal&apos;s account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>The contract signer&apos;s account must be the same as this proposal&apos;s account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals (Contract signer 2)</relationshipLabel>
    <relationshipName>Proposals5</relationshipName>
    <type>Lookup</type>
</CustomField>