force-app/main/default/objects/Proposal__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The country where this proposal&apos;s parent organization does its work</description>
    <inlineHelpText>The country where this proposal&apos;s parent organization does its work</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>