force-app/main/default/objects/Proposal__c/fields/Country_override__c.field-meta.xml
<CustomField>
    <fullName>Country_override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected country (if any) overrides the country inherited from the linked account record.</description>
    <inlineHelpText>The selected country (if any) overrides the country inherited from the linked account record.</inlineHelpText>
    <label>Country override</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Proposals (Country override)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>