force-app/main/default/objects/Proposal__c/fields/Cross_regional_initiative__c.field-meta.xml
<CustomField>
    <fullName>Cross_regional_initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this proposal/grant is considered to be a cross-regional initiative (formerly called &apos;Movement Building&apos;)</description>
    <inlineHelpText>Checked if this proposal/grant is considered to be a cross-regional initiative (formerly called &apos;Movement Building&apos;)</inlineHelpText>
    <label>Cross regional initiative</label>
    <type>Checkbox</type>
</CustomField>