force-app/main/default/objects/Proposal__c/fields/Current_payment_method__c.field-meta.xml
<CustomField>
    <fullName>Current_payment_method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current payment method used for this proposal</description>
    <inlineHelpText>Current payment method used for this proposal</inlineHelpText>
    <label>Current payment method</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account related to the payment method must be the same account as this grant</errorMessage>
        <filterItems>
            <field>Payment_Method__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Select a payment method for this grant</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>