force-app/main/default/objects/Proposal__c/fields/Current_payment_milestone__c.field-meta.xml
<CustomField>
    <fullName>Current_payment_milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current payment milestone assigned to this proposal</description>
    <inlineHelpText>Current payment milestone assigned to this proposal</inlineHelpText>
    <label>Current payment milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Proposals (Current payment milestone)</relationshipLabel>
    <relationshipName>Proposals2</relationshipName>
    <type>Lookup</type>
</CustomField>