force-app/main/default/objects/Proposal__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The custom reqs for this proposal (if any)</description>
    <inlineHelpText>The custom reqs for this proposal (if any)</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>