force-app/main/default/objects/Proposal__c/fields/Date_acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Date_acknowledged__c</fullName>
    <description>Date an acknowledgement letter sent</description>
    <inlineHelpText>Date an acknowledgement letter sent</inlineHelpText>
    <label>Date acknowledged</label>
    <type>Date</type>
</CustomField>