force-app/main/default/objects/Proposal__c/fields/Date_approved_for_award__c.field-meta.xml
<CustomField>
    <fullName>Date_approved_for_award__c</fullName>
    <description>The date that the grant was approved prior to awarding</description>
    <inlineHelpText>The date that the grant was approved prior to awarding</inlineHelpText>
    <label>Date approved for award</label>
    <type>Date</type>
</CustomField>