force-app/main/default/objects/Proposal__c/fields/Date_approved_for_contract__c.field-meta.xml
<CustomField>
    <fullName>Date_approved_for_contract__c</fullName>
    <description>The date that the CFO approved the grant</description>
    <inlineHelpText>The date the grant is approved for contract</inlineHelpText>
    <label>Date approved for contract</label>
    <type>Date</type>
</CustomField>