force-app/main/default/objects/Proposal__c/fields/Date_award_ack_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_award_ack_submitted__c</fullName>
    <description>The date on which the grant award notification/ack form was submitted at the online apps site</description>
    <inlineHelpText>The date on which the grant award notification/ack form was submitted at the online apps site</inlineHelpText>
    <label>Date award ack submitted</label>
    <type>Date</type>
</CustomField>