force-app/main/default/objects/Proposal__c/fields/Date_award_withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_award_withdrawn__c</fullName>
    <description>Date the grant award was withdrawn (usually by us)</description>
    <inlineHelpText>Date the grant award was withdrawn (usually by us)</inlineHelpText>
    <label>Date award withdrawn</label>
    <type>Date</type>
</CustomField>