force-app/main/default/objects/Proposal__c/fields/Date_awarded__c.field-meta.xml
<CustomField>
    <fullName>Date_awarded__c</fullName>
    <description>Date on which the proposal becomes a grant</description>
    <inlineHelpText>Date on which the proposal becomes a grant</inlineHelpText>
    <label>Date awarded</label>
    <type>Date</type>
</CustomField>