force-app/main/default/objects/Proposal__c/fields/Date_Board_EC_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Board_EC_approved__c</fullName>
    <description>The date on which the Board&apos;s Executive Committee approved this proposal/grant</description>
    <inlineHelpText>The date on which the Board&apos;s Executive Committee approved this proposal/grant</inlineHelpText>
    <label>Date Board approved</label>
    <type>Date</type>
</CustomField>