force-app/main/default/objects/Proposal__c/fields/Date_closed_incomplete__c.field-meta.xml
<CustomField>
    <fullName>Date_closed_incomplete__c</fullName>
    <description>Date on which grant was closed although one or more milestones weren&apos;t completed</description>
    <inlineHelpText>Date on which grant was closed although one or more milestones weren&apos;t completed</inlineHelpText>
    <label>Date closed incomplete</label>
    <type>Date</type>
</CustomField>