force-app/main/default/objects/Proposal__c/fields/Date_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_completed__c</fullName>
    <description>Date the grant was completed &amp; closed</description>
    <inlineHelpText>Date the grant was completed &amp; closed</inlineHelpText>
    <label>Date closed</label>
    <type>Date</type>
</CustomField>