force-app/main/default/objects/Proposal__c/fields/Date_contract_docs_approved__c.field-meta.xml
<CustomField>
    <fullName>Date_contract_docs_approved__c</fullName>
    <description>The date on which the grant&apos;s contract docs were approved (if any)</description>
    <inlineHelpText>The date on which the grant&apos;s contract docs were approved (if any)</inlineHelpText>
    <label>Date contract docs approved</label>
    <type>Date</type>
</CustomField>