force-app/main/default/objects/Proposal__c/fields/Date_contract_docs_recd__c.field-meta.xml
<CustomField>
    <fullName>Date_contract_docs_recd__c</fullName>
    <description>The date that the various contract docs are received from grantee</description>
    <inlineHelpText>The date that the various contract docs are received from grantee</inlineHelpText>
    <label>Date contract docs recd</label>
    <type>Date</type>
</CustomField>