force-app/main/default/objects/Proposal__c/fields/Date_contract_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_contract_letter_sent__c</fullName>
    <description>The date on which the contract letter was sent (auto-filled)</description>
    <inlineHelpText>The date on which the contract letter was sent (auto-filled)</inlineHelpText>
    <label>Date contract letter sent</label>
    <type>Date</type>
</CustomField>