force-app/main/default/objects/Proposal__c/fields/Date_declined__c.field-meta.xml
<CustomField>
    <fullName>Date_declined__c</fullName>
    <description>Date the proposal was declined</description>
    <inlineHelpText>Date the proposal was declined</inlineHelpText>
    <label>Date declined</label>
    <type>Date</type>
</CustomField>