force-app/main/default/objects/Proposal__c/fields/Date_due_next_milestone__c.field-meta.xml
<CustomField>
    <fullName>Date_due_next_milestone__c</fullName>
    <description>The date due for this proposal&apos;s next milestone</description>
    <formula>Next_milestone_due__r.Date_due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date due for this proposal&apos;s next milestone</inlineHelpText>
    <label>Date due next milestone</label>
    <type>Date</type>
</CustomField>