force-app/main/default/objects/Proposal__c/fields/Date_grant_award_notification_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_grant_award_notification_sent__c</fullName>
    <description>Date when a grant award notification letter was posted/sent to grantee</description>
    <inlineHelpText>Date when a grant award notification letter was posted/sent to grantee</inlineHelpText>
    <label>Date grant award notification sent</label>
    <type>Date</type>
</CustomField>