force-app/main/default/objects/Proposal__c/fields/Date_held__c.field-meta.xml
<CustomField>
    <fullName>Date_held__c</fullName>
    <description>The date on which this proposal was held, that is, a letter was sent/posted to the group informing them that processing of the proposal has been put on hold</description>
    <inlineHelpText>The date on which this proposal was held, that is, a letter was sent/posted to the group informing them that processing of the proposal has been put on hold</inlineHelpText>
    <label>Date held</label>
    <type>Date</type>
</CustomField>