force-app/main/default/objects/Proposal__c/fields/Date_invited__c.field-meta.xml
<CustomField>
    <fullName>Date_invited__c</fullName>
    <description>Date on which the invite letter to submit ONLINE was sent</description>
    <inlineHelpText>Date on which the invite letter to submit ONLINE was sent</inlineHelpText>
    <label>Date invited</label>
    <type>Date</type>
</CustomField>