force-app/main/default/objects/Proposal__c/fields/Date_milestone_completed_recent__c.field-meta.xml
<CustomField>
    <fullName>Date_milestone_completed_recent__c</fullName>
    <description>The latest date completed for milestones</description>
    <inlineHelpText>The latest date completed for milestones</inlineHelpText>
    <label>Date milestone completed recent</label>
    <summarizedField>Milestone__c.Date_completed__c</summarizedField>
    <summaryForeignKey>Milestone__c.Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>