force-app/main/default/objects/Proposal__c/fields/Date_OFAC_checked__c.field-meta.xml
<CustomField>
    <fullName>Date_OFAC_checked__c</fullName>
    <description>Date of last OFAC check for account/contact names associated with this proposal</description>
    <inlineHelpText>Date of last OFAC check for account/contact names associated with this proposal</inlineHelpText>
    <label>Date OFAC checked</label>
    <type>Date</type>
</CustomField>