force-app/main/default/objects/Proposal__c/fields/Date_overdue_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_overdue_letter_sent__c</fullName>
    <description>Date when an overdue letter was sent to the applicant notifying them that the submission deadline has passed</description>
    <inlineHelpText>Date when an overdue letter was sent to the applicant notifying them that the submission deadline has passed</inlineHelpText>
    <label>Date overdue letter sent</label>
    <type>Date</type>
</CustomField>