force-app/main/default/objects/Proposal__c/fields/Date_paid_first__c.field-meta.xml
<CustomField>
    <fullName>Date_paid_first__c</fullName>
    <description>The date paid of the first non-problem payment associated with this grant</description>
    <inlineHelpText>The date paid of the first non-problem payment associated with this grant</inlineHelpText>
    <label>Date paid first</label>
    <summarizedField>Payment__c.Date_paid__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Date_paid__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Has_problem_non_formula__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Proposal__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>