force-app/main/default/objects/Proposal__c/fields/Date_paid_recent__c.field-meta.xml
<CustomField>
    <fullName>Date_paid_recent__c</fullName>
    <description>The latest date paid for this proposal</description>
    <inlineHelpText>The latest date paid for this proposal</inlineHelpText>
    <label>Date paid recent</label>
    <summarizedField>Payment__c.Date_paid__c</summarizedField>
    <summaryForeignKey>Payment__c.Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>