force-app/main/default/objects/Proposal__c/fields/Date_partial_pre_contract_docs_recd__c.field-meta.xml
<CustomField>
    <fullName>Date_partial_pre_contract_docs_recd__c</fullName>
    <description>The date that partial pre-contract docs are received from grantee, and/or that those documents are under review</description>
    <inlineHelpText>The date that partial pre-contract docs are received from grantee, and/or that those documents are under review</inlineHelpText>
    <label>Date partial pre contract docs recd</label>
    <type>Date</type>
</CustomField>