force-app/main/default/objects/Proposal__c/fields/Date_pay_info_verify_correct_needed__c.field-meta.xml
<CustomField>
    <fullName>Date_pay_info_verify_correct_needed__c</fullName>
    <description>The date on which we requested that the group fill out a payment info verify/correct form</description>
    <inlineHelpText>The date on which we requested that the group fill out a payment info verify/correct form</inlineHelpText>
    <label>Date payment info verify/correct needed</label>
    <type>Date</type>
</CustomField>