force-app/main/default/objects/Proposal__c/fields/Date_payment_put_on_hold__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_put_on_hold__c</fullName>
    <description>The date that grant payments have been put on hold, either because the grantee asked us or due to internal concerns</description>
    <inlineHelpText>The date that grant payments have been put on hold, either because the grantee asked us or due to internal concerns</inlineHelpText>
    <label>Date payment put on hold</label>
    <type>Date</type>
</CustomField>