force-app/main/default/objects/Proposal__c/fields/Date_pre_contract_docs_recd__c.field-meta.xml
<CustomField>
    <fullName>Date_pre_contract_docs_recd__c</fullName>
    <description>The date on which we received the group&apos;s response to our pre-contract mailing</description>
    <inlineHelpText>The date on which we received the group&apos;s pre-contract documents</inlineHelpText>
    <label>Date pre contract docs recd</label>
    <type>Date</type>
</CustomField>