force-app/main/default/objects/Proposal__c/fields/Date_ready_for_award_approval__c.field-meta.xml
<CustomField>
    <fullName>Date_ready_for_award_approval__c</fullName>
    <description>If non-blank, then due diligence has been completed and this proposal is ready for approval</description>
    <inlineHelpText>If non-blank, then due diligence has been completed and this proposal is ready for approval</inlineHelpText>
    <label>Date ready for award approval</label>
    <type>Date</type>
</CustomField>