force-app/main/default/objects/Proposal__c/fields/Date_received__c.field-meta.xml
<CustomField>
    <fullName>Date_received__c</fullName>
    <description>Date the proposal arrives</description>
    <inlineHelpText>Date the proposal arrives</inlineHelpText>
    <label>Date received</label>
    <type>Date</type>
</CustomField>